# paradise_atmos_rs

./: Cargo.toml  README.md
.cargo/: config
src/: constants.rs  gas_mixture.rs  lib.rs  procs.rs  turf.rs  utils.rs
src/constants/: heat.rs  heat_transfer_coefficients.rs  plasma.rs
src/gas_mixture/: adds.rs  constants.rs  getters.rs  helpers.rs  mixtures.rs  procs.rs  setters.rs  subs.rs  turf.rs  utils.rs
src/gas_mixture/constants/: excited_groups.rs  fire.rs
src/gas_mixture/mixtures/: mixture.rs  mixture_native.rs  mixtures.rs  mixtures_native.rs
src/procs/: gas_mixture.rs
