[package]
name = "paradise_atmos_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
auxtools = { git = "https://github.com/Jerrody/auxtools" }
once_cell = "1.17.0"
tracing-tracy = { version = "0.10.1", optional = true }
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
], optional = true }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
], optional = true }

[features]
profile = []
profile_proc = []

[profile.release]
lto = true
codegen-units = 1
